# build-apis

./: .gitignore  README.md  docker-compose.yml  horusec-config.json  notes.md
Django/: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  notes.md  pyproject.toml  requirements.txt
Django/api/: models.py  serializers.py  views.py
Django/api/migrations/: 0001_initial.py
Django/sistema/: asgi.py  settings.py  urls.py  wsgi.py
Exemplo-01/: .example-env  Dockerfile  README.md  main.py  notes.md  pyproject.toml  requirements.txt
Exemplo-01/api/: __init__.py  main.py  models.py  services.py  utils.py
Exemplo-01/api/routers/: llm_router.py  operacoes_router.py
Exemplo-01/resources/: Insomnia_2026-05-16.yaml  openapi.json
Exemplo-01/tests/: perf_test.py  test_api.py
