[project]
name = "sistema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "pre-commit>=4.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
